fix flex gap

--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -25,7 +25,7 @@
       -ms-flex-direction: row;
 
           flex-direction: row;
-  gap: 15px;
+  /* gap: 15px; */
 }
 
 @media (max-width: 800px) {
@@ -133,6 +133,7 @@
   border: 1px solid #8894AA;
   border-radius: var(--rounded);
   padding: 20px;
+  margin: 0 15px 15px 0;
 }
 
 .left-landing{
@@ -158,7 +159,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 15px;
+  /* gap: 15px; */
 }
 
 .separator{
